--- a/frontend/pages/adventures/index.html
+++ b/frontend/pages/adventures/index.html
@@ -48,7 +48,7 @@
         <!-- Page heading and description -->
         <h1>Explore all adventures</h1>
         <p style="font-size: 24px">
-          Here's a list of places that you can explore in city
+          Here's a list of places that you can explore in city:
         </p>
         <div class="mb-5">
           <!-- Filters section -->
